--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "~1.13.0",
     "connect-mongodb-session": "~1.1.0",
     "express-form": "~0.12.4",
-    "passport-local-mongoose": "~4.0.0"
+    "passport-local-mongoose": "~4.0.0",
+    "jade": "~1.11.0"
   }
 }
