--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-mongodb-session": "~1.1.0",
     "express-form": "~0.12.4",
     "passport-local-mongoose": "~4.0.0",
-    "jade": "~1.11.0"
+    "jade": "~1.11.0",
+    "passport": "~0.3.2"
   }
 }
